examples/test_package/Double_dc_full/steps/benchrps___precise_run3/#test_analysis_3_result.txt
### **Evaluation Report: Rock-Paper-Scissors Game in ProbLog**

---

#### **1. Document Title**
**Analysis of Rock-Paper-Scissors ProbLog Implementation**

---

#### **2. Background and Purpose**
The provided ProbLog code implements the classic rock-paper-scissors game, where two players submit sequences of moves, and the winner is determined based on the game's rules. The purpose of this evaluation is to:
- Verify the correctness of the implementation.
- Analyze the test results and identify any failures.
- Ensure compliance with classical and probabilistic ProbLog rules.
- Check for edge cases and potential improvements.

---

#### **3. Test Results Summary**
The test query provided is:
```prolog
query(determine_winner([rock,rock,rock],[paper,paper,scissor],W)).
```

**Result:**
The test failed with the following error:
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 41:77.
```

**Interpretation:**
The error indicates that the ProbLog engine could not find a valid clause for the `->/2` operator in the `determine_winner` predicate. This suggests a syntax or logical error in the implementation.

---

#### **4. Failure Localization**
**Failed Query:**
```prolog
determine_winner([rock,rock,rock],[paper,paper,scissor],W).
```

**Error Location:**
The error occurs in the `determine_winner` predicate, specifically at the line where the `->/2` operator is used. The problematic code block is:
```prolog
determine_winner(P1Moves, P2Moves, Winner) :- 
    play(P1Moves, P2Moves, Results), 
    compute_score(Results, Score), 
    (Score > 0 -> Winner = 'Player 1'; Score < 0 -> Winner = 'Player 2'; Winner = 'Draw').
```

**Issue:**
The `->/2` operator is not correctly formatted or supported in the ProbLog context. ProbLog does not natively support the `->/2` operator for conditional branching. Instead, it relies on probabilistic facts and rules.

---

#### **5. Root Cause Analysis**
**Classical ProbLog Context:**
- The `determine_winner` predicate attempts to use imperative-style conditional logic (`->/2`), which is not valid in ProbLog.
- ProbLog requires declarative logic, and conditional branching must be handled using probabilistic facts or auxiliary predicates.

**Probabilistic Context:**
- The code does not use probabilistic facts or rules, so no probabilistic analysis is required.
- The error is purely syntactic and related to classical ProbLog.

**DeepProbLog:**
- The code does not use any DeepProbLog features (e.g., `nn/3`, `tensor/...`). Report: "DeepProbLog feature not used."

---

#### **6. Overall Analysis**
**Functional Requirements:**
- **Classical Reasoning:** Partially met. The `play/3` and `compute_score/2` predicates are correctly implemented, but the `determine_winner` predicate fails due to incorrect syntax.
- **Probabilistic Reasoning:** Not applicable (no probabilistic facts or rules).
- **Neural Network Integration:** Not used.

**Edge Cases:**
- **Non-list Input:** The code does not handle cases where `P1Moves` or `P2Moves` are not lists.
- **Empty Lists:** The `play/3` predicate correctly handles empty lists, but the `determine_winner` predicate does not explicitly account for this.
- **Deep Recursion:** No performance issues are expected, as the recursion depth is limited by the length of the input lists.

---

#### **7. Error Summary**

| Number | Problem | Impact | Suggestion |
|--------|---------|--------|------------|
| 1      | Invalid use of `->/2` in `determine_winner` | Predicate fails to execute | Replace with declarative logic or auxiliary predicates |
| 2      | No handling for non-list inputs | Potential runtime errors | Add input validation |
| 3      | No probabilistic facts/rules | Limited functionality | Extend with probabilistic features if needed |

---

### **Final Recommendations**
1. **Fix `determine_winner`:**
   Replace the `->/2` operator with a declarative approach, such as:
   ```prolog
   determine_winner(P1Moves, P2Moves, Winner) :- 
       play(P1Moves, P2Moves, Results), 
       compute_score(Results, Score), 
       (Score > 0, Winner = 'Player 1'; 
        Score < 0, Winner = 'Player 2'; 
        Score =:= 0, Winner = 'Draw').
   ```

2. **Add Input Validation:**
   Ensure `P1Moves` and `P2Moves` are lists before processing.

3. **Extend for Probabilistic Use:**
   If probabilistic reasoning is desired, add probabilistic facts or rules (e.g., weighted moves).

---

**Word Count:** ~450 words.  
**Tone:** Formal and analytical.  
**Format:** Markdown with code blocks and tables.  